syntax = "proto3";

package internalpb;

import "google/protobuf/duration.proto";
import "internal/dependency.proto";

option go_package = "github.com/tochemey/goakt/v3/internal/internalpb;internalpb";

message GrainId {
  string kind = 1;
  string name = 2;
  // value represents the actual GrainId value
  string value = 3;
}

// Grain represents the virtual actor information on the wire.
message Grain {
  GrainId grain_id = 1;
  google.protobuf.Duration passivate_after = 2;
  repeated internalpb.Dependency dependencies = 3;
}
